<resources>
    <string name="app_name">Calendar Test</string>
    <string name="action_settings">Settings</string>
    <string name="menu_refresh">Refresh</string>
    <string name="title_activity_settings">Settings</string>
    <string name="calendar_account_title">Calendar Account Name</string>
    <string name="calendar_account_type">Calendar Account Type</string>
    <string name="calendar_owner_account">Calendar Owner Account</string>
    <string name="appVersionTitle">0.1.2</string>
    <string name="copyright_title">Copyright</string>
    <string name="copyright_summary">Quiggles Productions</string>
    <string name="haptic_feedback_preference_title">Haptic Feedback</string>
    <string name="haptic_feedback_preference_summary">Would you like haptic feedback</string>
    <string name="title_activity_addEvent">Add Event</string>
    <string name="add">Add</string>
    <string name="eventTitle">Title</string>

</resources>
